POR/RefEdge/src/objects/RefEdge_Configuration_Protected__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Current_Package_Date__c</fullName>
        <label>Current Package Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Microsite_Key__c</fullName>
        <description>The key used for encryption and decryption for microsite.</description>
        <label>Microsite Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RefEdge Configuration Protected</label>
</CustomObject>